--- a/trac/mimeview/tests/pygments.html
+++ b/trac/mimeview/tests/pygments.html
@@ -14,12 +14,14 @@
     <h1>Pygments Renderer Test Cases</h1>
     <br />
     <div id="python_hello">
-<span class="k">def</span><span class=""> </span><span class="nf">hello</span><span class="">():
+<span class="">
+</span><span class="k">def</span><span class=""> </span><span class="nf">hello</span><span class="p">():</span><span class="">
         </span><span class="k">return</span><span class=""> </span><span class="s">"Hello World!"</span><span class="">
 </span>
     </div>
     <div id="python_hello_mimeview">
-<div class="code"><pre><span class="k">def</span><span class=""> </span><span class="nf">hello</span><span class="">():
+<div class="code"><pre><span class="">
+</span><span class="k">def</span><span class=""> </span><span class="nf">hello</span><span class="p">():</span><span class="">
         </span><span class="k">return</span><span class=""> </span><span class="s">"Hello World!"</span><span class="">
 </span></pre></div>
     </div>
