--- a/trac/mimeview/tests/patch.html
+++ b/trac/mimeview/tests/patch.html
@@ -90,7 +90,7 @@
                       <tr class="first">
                         <th>1</th><th>&nbsp;</th><td class="l"><span>ONELINE</span>&nbsp;</td>
                       </tr><tr>
-                        <th>2</th><th>&nbsp;</th><td class="l"><span>&nbsp;No newline at end of file</span>&nbsp;</td>
+                        <th>2</th><th>&nbsp;</th><td class="l"><span><em>&nbsp;No newline at end of file</em></span>&nbsp;</td>
                       </tr>
                       <tr class="last">
                         <th>&nbsp;</th><th>1</th><td class="r"><span>ONELINE&nbsp; &nbsp; &nbsp; &nbsp; </span>&nbsp;</td>
@@ -131,7 +131,7 @@
                       <tr>
                         <th> </th><th>1</th><td class="r"><span>ONELINE</span> </td>
                       </tr><tr class="last">
-                        <th> </th><th>2</th><td class="r"><span>&nbsp;No newline at end of file</span> </td>
+                        <th> </th><th>2</th><td class="r"><span><em>&nbsp;No newline at end of file</em></span> </td>
                       </tr>
             </tbody>
         </table>
